# loom

./: Cargo.toml  README.md  WORKFLOW.md  docker-compose.yml
.cargo/: config.toml
backlog/: 001-score-eval-rename.md  002-cleanup.md  003-simplify-loom-pipe.md  004-create-loom-eval.md  005-runtime-integration.md  006-cli-umbrella-crate.md  01-result-metadata.md  02-error-aggregation.md  03-control-flow-ops.md  04-result-operators.md  05-collection-ops.md  06-time-operators.md  07-multi-file-merge.md  README.md
bins/api/: Dockerfile
bins/worker/: Cargo.toml  Dockerfile
configs/: basic.config.yaml  score.config.yaml
crates/events/: Cargo.toml
crates/storage/: Cargo.toml
docs/: 1.MEMORY.md  1.memory.md  2.ENTITY.md  2.INGESTION.md  2.ingestion.md  3.RECALL.md  3.guards.md  4.recall.md  5.classification.md  MEMORY.md  README.md
docs/analysis/: 1.loom-vs-hindsight.md  1.merc-vs-hindsight.md  2.loom-vs-zep.md  2.merc-vs-zep.md  3.loom-vs-enterprise.md  3.merc-vs-enterprise.md  4.hindsight-vs-zep.md  README.md
docs/diagrams/: 1.INGEST.md
docs/loom/: README.md  hybrid-algorithm.md  scoring-algorithm.md
docs/merc/: README.md  scoring-algorithm.md
docs/reference/: 1.hindsight.md  2.zep.md  3.enterprise.md  README.md
libs/: README.md
libs/loom/: CHANGELOG.md  Cargo.toml  README.md
libs/loom-assert/: CHANGELOG.md  (+2 more)
libs/loom-cortex/: CHANGELOG.md  Cargo.toml  README.md
libs/loom-cortex/src/: device.rs  lib.rs  model.rs  model_type.rs  resource.rs
libs/loom-cortex/src/bench/: mod.rs  scorer.rs
libs/loom-cortex/src/config/: conversation.rs  generation.rs  masked_language.rs  mod.rs  model_config.rs  question_answering.rs  sentence_embeddings.rs  sequence_classification.rs  token_classification.rs  zero_shot.rs
libs/loom-eval/: CHANGELOG.md  Cargo.toml  README.md
libs/loom-eval/src/: dataset.rs  layer.rs  lib.rs  output.rs
libs/loom-eval/src/config/: category.rs  label.rs  mod.rs  modifier.rs
libs/loom-eval/src/result/: eval.rs  mod.rs  sample.rs
libs/loom-runtime/: BACKLOG.md  CHANGELOG.md  Cargo.toml  README.md
libs/loom-runtime/src/: config.rs  context.rs  layer.rs  lib.rs  map.rs  media_type.rs
libs/loom-runtime/src/bench/: coverage.rs  dataset.rs  mod.rs  runner.rs  sample.rs
libs/loom-runtime/src/bench/result/: bench.rs  export.rs  metrics.rs  mod.rs  sample.rs
libs/loom-runtime/src/bench/runner/: async.rs  batch.rs  helpers.rs  mod.rs
libs/loom-runtime/src/data_source/: document.rs  entity.rs  etag.rs  json.rs  memory.rs  mod.rs  yaml.rs
libs/loom-runtime/src/data_source/sources/: json_source.rs  memory_source.rs  mod.rs  yaml_source.rs
libs/loom-runtime/src/eval/: builder.rs  evaluable.rs  mod.rs
libs/loom-runtime/src/eval/score/: mod.rs
libs/loom-runtime/src/model/: config.rs
libs/loom-runtime/src/path/: field.rs  file.rs  mod.rs
libs/loom-runtime/src/pipe/: source.rs
libs/loom-runtime/src/score/: category.rs  label.rs  mod.rs  options.rs  result.rs
libs/loom-runtime/src/score/config/: mod.rs
libs/loom-runtime/src/value/: array.rs  mod.rs  object.rs
libs/loom/src/: lib.rs
merc-api/: Cargo.toml  Dockerfile
merc-api/src/: context.rs  main.rs  request_context.rs
merc-api/src/routes/: index.rs  ingest.rs
merc-engine/: BACKLOG.md
merc-worker/: Cargo.toml
output/: params.json  scores.json
plans/: shimmering-drifting-moonbeam.md
services/worker/: Cargo.toml  Dockerfile
(+189 files in other folders)
