[package]
name = "merc-api"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
actix-web = { version = "4" }
serde = { version = "1", features = ["default", "derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate"] }

merc-error = { workspace = true }
merc-storage = { workspace = true }