[package]
name = "loom-cortex"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
loom-config = { workspace = true }
serde = { workspace = true }
tch = { workspace = true }
rust-bert = { version = "0.23" }
console = { version = "0.16", features = ["std"] }